// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a single file with a duplicate entity name Should return an error -> message[0] 1`] = `"Domain Entity named DomainEntity1 is a duplicate declaration of that name."`;

exports[`When a single file with a duplicate entity name Should return an error -> message[1] 1`] = `"Domain Entity named DomainEntity1 is a duplicate declaration of that name."`;

exports[`When a single file with a duplicate entity name Should return an error -> sourceMap[0] 1`] = `
Object {
  "column": 0,
  "line": 9,
  "tokenText": "Domain Entity",
}
`;

exports[`When a single file with a duplicate entity name Should return an error -> sourceMap[1] 1`] = `
Object {
  "column": 0,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;

exports[`When files have duplicate entity names Should return an error -> message[0] 1`] = `"Domain Entity named DomainEntity1 is a duplicate declaration of that name."`;

exports[`When files have duplicate entity names Should return an error -> message[1] 1`] = `"Domain Entity named DomainEntity1 is a duplicate declaration of that name."`;

exports[`When files have duplicate entity names Should return an error -> sourceMap[0] 1`] = `
Object {
  "column": 0,
  "line": 9,
  "tokenText": "Domain Entity",
}
`;

exports[`When files have duplicate entity names Should return an error -> sourceMap[1] 1`] = `
Object {
  "column": 0,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;
